# usb-c-soft-network

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  LICENCE  Makefile  README.md  SECURITY.md  TODO.md  target_usb_c_port.env.example
.devcontainer/: Dockerfile  devcontainer.json  setup-oneapi.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: CONFIG_FORMAT.md  CONNECTION_WORKFLOW.md  TROUBLESHOOTING.md  how-to-select-port.md
examples/: CMakeLists.txt  README.md  simple_usb_net.c
scripts/: build.sh  check-connection-ready.sh  check-system-requirements.sh  find-usb-c-ports.sh  host_build.sh  identify-usb-c-port.sh  run-vm-tests.sh
src/: main.c  usb_net_core.c  usb_raw_comm.c  usb_raw_comm.h
